# mcp-weather-server

./: pyproject.toml
src/mcp_weather_server/: __init__.py  weather.py
