[project]
name = "mcp-weather-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Francisco Filho", email = "francisco@capimgrosso.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
]

[project.scripts]
mcp-weather-server = "mcp_weather_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
